--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 
   body {
 
-    background-image: linear-gradient(90deg, rgba(0, 0, 0, 0.999) 40%, rgba(0,0,0,0) 90%, rgba(0,212,255,0) 100%), url('wednesday.jpg');
+    background-image: linear-gradient(90deg, rgba(0, 0, 0, 0.999) 40%, rgba(0,0,0,0) 90%, rgba(0,212,255,0) 100%), url('bg.jpg');
     background-size: cover;
     font-family: 'Netflix Sans';
 
@@ -77,3 +77,12 @@ text-decoration: underline;
       z-index: 1;
     }
   
+/* Hint suggestion */
+#suggestion_div {
+  display: "none";
+  z-index: 1;
+  width: 30%;
+  position: absolute; right: 25px; margin-top: 0px;
+
+}
+
