--- a/assets/css/update.css
+++ b/assets/css/update.css
@@ -1,16 +1,19 @@
 body {
-  background-image: linear-gradient(
-      90deg,
-      rgba(0, 0, 0, 0.999) 40%,
-      rgba(0, 0, 0, 0) 90%,
-      rgba(0, 212, 255, 0) 100%
-    ),
-    url("bg.jpg");
-  background-size: cover;
   font-family: "Netflix Sans";
+  background-image: url("bg.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 /* Hint suggestion */
+#suggestion_div {
+  display: "none";
+  z-index: 1;
+  width: 30%;
+  position: absolute;
+  right: 25px;
+  margin-top: 0px;
+}
 
 .dropdown-item {
   background: #c4c4c4;
@@ -31,20 +34,16 @@ body {
 }
 
 #topNumber {
-  font-size: 30px;
-  color: white;
+  font-size: 60px;
+  position: absolute;
+  right: 0;
+  margin: 25px;
 }
 .displayCards {
   -webkit-transition: all 1s;
   -moz-transition: all 1s;
   -o-transition: all 1s;
   transition: all 1s;
-}
-
-#titleCard {
-  font-size: 60px;
-  color: white;
-  font-weight: 700;
 }
 
 .badge-dragging {
@@ -55,9 +54,17 @@ body {
   height: auto;
   min-height: 50px;
 }
-/* search icon */
-.ms-n5 {
-  margin-left: -40px;
-  color: gray;
-  z-index: 4;
+
+.badge-selected {
+  cursor: pointer;
+}
+.top-movies {
+  padding: 25px;
+}
+.image {
+  transition: transform 0.15s;
+}
+.image.zoom {
+  transform: scale(1.2);
+  z-index: 1;
 }
